# fusilli

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  hipdnn-plugin-build-and-test.yml
benchmarks/: CMakeLists.txt  driver.cpp
build_tools/cmake/: FusilliBuildUtils.cmake  FusilliTestUtils.cmake
plugins/hipdnn-plugin/: CMakeLists.txt
plugins/hipdnn-plugin/build_tools/: FusilliPluginTestUtils.cmake  ThePebble.py  thepebble_config.toml
plugins/hipdnn-plugin/test/: CMakeLists.txt  test_fusilli_plugin_api.cpp
plugins/hipdnn-plugin/test/integration/: CMakeLists.txt  test_basic.cpp  test_convfprop.cpp
plugins/hipdnn-plugin/test/integration/matmul/: simple_batched_matmul.cpp  simple_matmul_with_bias.cpp
samples/: CMakeLists.txt
samples/convolution/: conv_dgrad_nhwc_krsc.cpp  conv_dgrad_nhwc_krsc_grouped.cpp  conv_fprop_grouped_with_relu_and_bias.cpp  conv_fprop_nchw_kcrs.cpp  conv_fprop_nchw_kcrs_grouped.cpp  conv_fprop_nhwc_krsc.cpp  conv_fprop_nhwc_krsc_with_pad.cpp  conv_fprop_with_bias.cpp  conv_fprop_with_relu.cpp  conv_fprop_with_relu_and_bias.cpp  conv_wgrad_nhwc_krsc.cpp  conv_wgrad_nhwc_krsc_grouped.cpp  conv_wgrad_nhwc_krsc_grouped_strided.cpp
samples/pointwise/: pointwise_add_transposed.cpp  pointwise_binary_ops.cpp  pointwise_unary_ops.cpp
tests/: CMakeLists.txt  test_buffer.cpp  test_graph.cpp  test_handle.cpp
tests/lit/: test_conv_asm_emitter_nchw_kcrs.cpp  test_conv_asm_emitter_nchw_kcrs_with_pad.cpp  test_conv_asm_emitter_nchw_krsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc.cpp  test_conv_asm_emitter_ndhwc_kdrsc_grouped.cpp  test_conv_asm_emitter_nhwc_kcrs.cpp  test_conv_asm_emitter_nhwc_krsc.cpp  test_conv_asm_emitter_nhwc_krsc_grouped.cpp  test_conv_asm_emitter_nhwc_krsc_with_pad.cpp  test_pointwise_asm_emitter_add.cpp  test_pointwise_asm_emitter_add_transposed.cpp  test_pointwise_asm_emitter_div.cpp  test_pointwise_asm_emitter_mul.cpp  test_pointwise_asm_emitter_relu.cpp  test_pointwise_asm_emitter_sub.cpp
