# Copyright 2025 Advanced Micro Devices, Inc.
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

include(GoogleTest)
find_package(Threads REQUIRED)

# Plugin API tests
add_executable(fusilli_plugin_api_test
    test_fusilli_plugin_api.cpp
    utils.h
)
target_compile_options(fusilli_plugin_api_test PRIVATE ${FUSILLI_PLUGIN_WARNING_COMPILE_OPTIONS})
target_link_libraries(fusilli_plugin_api_test PRIVATE
    fusilli_plugin  # Link plugin directly
    fusilli::fusilli
    GTest::gtest_main
    hip::host
    hipdnn_sdk
    Threads::Threads
)
target_compile_definitions(fusilli_plugin_api_test PRIVATE
  FUSILLI_PLUGIN_NAME="${FUSILLI_PLUGIN_NAME}"
  FUSILLI_PLUGIN_ENGINE_ID=${FUSILLI_PLUGIN_ENGINE_ID}
)
# Register with CTest
gtest_discover_tests(fusilli_plugin_api_test
    PROPERTIES
      ENVIRONMENT "HIPDNN_LOG_LEVEL=info"
      ENVIRONMENT "FUSILLI_LOG_INFO=1"
      ENVIRONMENT "FUSILLI_LOG_FILE=stdout"
)

# Install test executable
install(TARGETS fusilli_plugin_api_test
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Graph import tests
add_executable(fusilli_plugin_graph_import_test
    test_graph_import.cpp
    utils.h
)
target_compile_options(fusilli_plugin_graph_import_test PRIVATE ${FUSILLI_PLUGIN_WARNING_COMPILE_OPTIONS})
target_link_libraries(fusilli_plugin_graph_import_test PRIVATE
    fusilli::fusilli
    GTest::gtest_main
    hipdnn_sdk
)
# Register with CTest
gtest_discover_tests(fusilli_plugin_graph_import_test
    PROPERTIES
      ENVIRONMENT "HIPDNN_LOG_LEVEL=info"
      ENVIRONMENT "FUSILLI_LOG_INFO=1"
      ENVIRONMENT "FUSILLI_LOG_FILE=stdout"
)

# Install test executable
install(TARGETS fusilli_plugin_graph_import_test
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Integration tests
add_subdirectory(integration)

# Generate and install CTestTestfile.cmake for installed tests
# This allows running ctest from the installed test directory
set(FUSILLI_PLUGIN_TEST_INSTALL_DIR "${CMAKE_INSTALL_BINDIR}/fusilli_plugin")
set(INSTALLED_CTEST_FILE "${CMAKE_CURRENT_BINARY_DIR}/CTestTestfile.cmake.install")

# Generate CTestTestfile.cmake that references installed test executables
file(WRITE "${INSTALLED_CTEST_FILE}"
    "# Autogenerated CTestTestfile for installed fusilli_plugin tests\n"
    "# Generated by fusilli_plugin build system\n\n"
)

# Add tests to the generated CTestTestfile.cmake
# Test paths are relative to the install directory
file(APPEND "${INSTALLED_CTEST_FILE}"
    "add_test(fusilli_plugin_api_test \"../fusilli_plugin_api_test\")\n"
)
file(APPEND "${INSTALLED_CTEST_FILE}"
    "add_test(fusilli_plugin_graph_import_test \"../fusilli_plugin_graph_import_test\")\n"
)
file(APPEND "${INSTALLED_CTEST_FILE}"
    "add_test(fusilli_plugin_integration_test \"../fusilli_plugin_integration_test\")\n"
)

# Set test properties for environment variables if needed
file(APPEND "${INSTALLED_CTEST_FILE}"
    "\n# Set environment variables\n"
    "set_tests_properties(fusilli_plugin_api_test\n"
    "    PROPERTIES\n"
    "      ENVIRONMENT \"HIPDNN_LOG_LEVEL=info\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_INFO=1\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_FILE=stdout\"\n"
    ")\n"
)
file(APPEND "${INSTALLED_CTEST_FILE}"
    "\n# Set environment variables\n"
    "set_tests_properties(fusilli_plugin_graph_import_test\n"
    "    PROPERTIES\n"
    "      ENVIRONMENT \"HIPDNN_LOG_LEVEL=info\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_INFO=1\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_FILE=stdout\"\n"
    ")\n"
)
file(APPEND "${INSTALLED_CTEST_FILE}"
    "\n# Set environment variables\n"
    "set_tests_properties(fusilli_plugin_integration_test\n"
    "    PROPERTIES\n"
    "      ENVIRONMENT \"HIPDNN_LOG_LEVEL=info\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_INFO=1\"\n"
    "      ENVIRONMENT \"FUSILLI_LOG_FILE=stdout\"\n"
    ")\n"
)
# Install the generated CTestTestfile.cmake
install(
    FILES "${INSTALLED_CTEST_FILE}"
    DESTINATION ${FUSILLI_PLUGIN_TEST_INSTALL_DIR}
    RENAME CTestTestfile.cmake
)
